# fakeknxpv

./: .gitignore  MANIFEST.in  README.md  README_installation.md  VERSION  build.ps1  git-update.sh  install-rpi.sh  pyproject.toml  setup.py
fake_knx_pv/: VERSION  cyclic_send_toknx_pv_data.cfg  cyclic_send_toknx_pv_data.cfg.exemple  cyclic_send_toknx_pv_data.py  description.xml
fake_knx_pv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fake_knx_pv/conso_data/: get_conso_data.py
fake_knx_pv/devices/: __init__.py  devices.py
fake_knx_pv/html/: view.html
fake_knx_pv/meteo_data/: get_meteo_data.py
fake_knx_pv/pv_data/: clouds.py  get_pv_data.py  pv_proj.py
services/: fakeknxpv.service  git-update.sh  gitupdate.service  install.sh
