[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fake_knx_pv"
version = "0.2.6"
description = "Simulation KNX PV pour données de production et consommation."
authors = [
    { name = "Eric" }
]
requires-python = ">=3.7"

dependencies = [
    "xknx",
    "pytz",
    "astral",
    "requests"
]
